<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        tools:context=".ui.SubmitActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/gadsLogo"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_marginStart="@dimen/margin_24"
                    android:src="@drawable/trimmed_gads_logo"
                    app:layout_constraintBottom_toBottomOf="@id/gadsText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gadsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/roboto"
                    android:text="@string/gads_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toEndOf="@id/gadsLogo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_bottom_line"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="@dimen/padding_24"
            android:paddingBottom="@dimen/padding_12"
            android:text="@string/project_submission"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="@dimen/text_size_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            style="@style/TextBoxStyle"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_4"
            android:ems="10"
            android:hint="@string/first_name_text"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            style="@style/TextBoxStyle"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_12"
            android:ems="10"
            android:hint="@string/last_name_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            style="@style/TextBoxStyle"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_12"
            android:ems="10"
            android:hint="@string/email_address_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            style="@style/TextBoxStyle"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_12"
            android:ems="10"
            android:hint="@string/project_on_github_link_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/btn_submit_background"
            android:fontFamily="@font/roboto_bold"
            android:paddingLeft="@dimen/padding_30"
            android:paddingRight="@dimen/padding_30"
            android:text="@string/submit_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>